log
Fri 14 Oct 2022 04:45:21 PM UTC: 
 tests:  0|4
total_score: 0/70
19bff1a
Fri 14 Oct 2022 04:51:52 PM UTC: 
 heap.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:42:16: error: unused variable ‘array’ [-Werror=unused-variable]
   42 |     heapElem * array = (heapElem*)calloc(3,sizeof(heapElem)) ;
      |                ^~~~~
cc1: all warnings being treated as errors
Compilation failed
72e0642
Fri 14 Oct 2022 04:52:19 PM UTC: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|3
total_score: 10/70
3ea39d2
Fri 14 Oct 2022 04:58:50 PM UTC: 
 heap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:23:23: error: incompatible types when initializing type ‘heapElem *’ {aka ‘struct nodo *’} using type ‘heapElem’ {aka ‘struct nodo’}
   23 |     heapElem * dato = pq->heapArray[0];
      |                       ^~
Compilation failed
9a9aae5
Fri 14 Oct 2022 04:59:30 PM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:24:16: error: incompatible types when returning type ‘heapElem’ {aka ‘struct nodo’} but ‘void *’ was expected
   24 |     return dato[0];
      |            ~~~~^~~
heap.c:25:1: error: control reaches end of non-void function [-Werror=return-type]
   25 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
fc71f86
Fri 14 Oct 2022 04:59:56 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:24:19: error: invalid type argument of ‘->’ (have ‘heapElem’ {aka ‘struct nodo’})
   24 |     return dato[0]->data;
      |                   ^~
heap.c:25:1: error: control reaches end of non-void function [-Werror=return-type]
   25 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
b5abf5f
Fri 14 Oct 2022 05:00:02 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
c89ec76
Fri 14 Oct 2022 05:00:54 PM UTC: 
 heap.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:24:15: error: invalid operands to binary == (have ‘heapElem’ {aka ‘struct nodo’} and ‘void *’)
   24 |     if(dato[0]==NULL){
      |        ~~~~~~~^~
      |            |
      |            heapElem {aka struct nodo}
Compilation failed
989835c
Fri 14 Oct 2022 05:01:05 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
66e07f7
Fri 14 Oct 2022 05:01:31 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:24:8: error: ‘size’ undeclared (first use in this function)
   24 |     if(size==0){
      |        ^~~~
heap.c:24:8: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
06f7ecc
Fri 14 Oct 2022 05:01:40 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
16669d6
